PROGRAMA_1/Expr.g4
grammar Expr;
root: expr EOF;
expr: EOF;
INT: 'int';
DOUBLE: 'double';
STRING: 'String';
BOOLEAN: 'Boolean';
PUBLIC: 'public';
CLASS: 'class';
SYSTEM: 'System';
WHILE: 'while';
DO: 'do';
NEW: 'new';
STATIC: 'static';
VOID: 'void';
BREAK: 'break';
TRUE: 'true';
FOR: 'for';
FALSE: 'false';
MAYOR: '>';
MENOR: '<';
MENOR_IGUAL: '<=';
MAYOR_IGUAL: '>=';
ASIGNACION: '=';
IGUAL_QUE: '==';
DIFERENTE_QUE: '!=';
SUMA_U:'++';
RESTA_U: '--';
SUMA: '+';
RESTA: '-';
DIVISION:'/';
MULTIPLICACION: '*';
MODULO: '%';
AND: '&&';
OR: '||';
PUNTO: '.';
PUNTO_COMA: ';';
PAR_ABRE:'(';
PAR_CIE: ')';
COR_ABRE:'[';
COR_CIE: ']';
LLA_ABRE:'{';
LLA_CIE: '}';
ENTERO: [0-9]+;
DECIMAL: [0-9]+'.'[0-9]+;
ID: [A-Za-z_][A-Z-a-z0-9_]+;
CADENA: '"'~["\t\r]*'"';
WS: [ \t\r\n]+ -> skip;
